[SC-8129] fixed header detail button, changed close button display, align all day checkbox

--- a/src/app/crm/contacts/orders/history-list-dialog/history-list-dialog.component.less
+++ b/src/app/crm/contacts/orders/history-list-dialog/history-list-dialog.component.less
@@ -22,6 +22,7 @@
             right: 15px;
             cursor: pointer;
             background-color: #FFF;
+            display: block;
             &:after, &:before {
                 position: absolute;
                 left: 9px;
